force-app/main/default/objects/Opportunity_Snapshot__c/fields/Additional_Concerns_Notes__c.field-meta.xml
<CustomField>
    <fullName>Additional_Concerns_Notes__c</fullName>
    <inlineHelpText>Notes from Sales Team to Onboarding team at time of closed won opp.</inlineHelpText>
    <label>Additional Concerns/Notes</label>
    <type>TextArea</type>
</CustomField>