force-app/main/default/objects/Opportunity_Snapshot__c/fields/Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Close_Date__c</fullName>
    <description>Opportunity Close Date</description>
    <label>Close Date</label>
    <type>Date</type>
</CustomField>