force-app/main/default/objects/Opportunity_Snapshot__c/fields/Opportunity_ID__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_ID__c</fullName>
    <label>Opportunity ID</label>
    <type>TextArea</type>
</CustomField>