force-app/main/default/objects/Opportunity_Snapshot__c/fields/Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Name__c</fullName>
    <label>Opportunity Name</label>
    <type>TextArea</type>
</CustomField>