force-app/main/default/objects/Opportunity_Snapshot__c/fields/Promo_Code__c.field-meta.xml
<CustomField>
    <fullName>Promo_Code__c</fullName>
    <label>Promo Code</label>
    <type>TextArea</type>
</CustomField>