force-app/main/default/objects/Opportunity_Snapshot__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Working</fullName>
            </value>
            <value>
                <fullName>Discovery</fullName>
            </value>
            <value>
                <fullName>Demo Scheduled</fullName>
            </value>
            <value>
                <fullName>Rescheduling</fullName>
            </value>
            <value>
                <fullName>Awaiting Decision</fullName>
            </value>
            <value>
                <fullName>Verbal Agreement</fullName>
            </value>
            <value>
                <fullName>Closed Won</fullName>
            </value>
            <value>
                <fullName>Closed Lost</fullName>
            </value>
            <value>
                <fullName>Pending Lost Sale</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>